--- a/account.html
+++ b/account.html
@@ -59,7 +59,7 @@
                             <input type="text" name="username" placeholder="Username" required>
                             <input type="password" name="password" placeholder="Password" required>
                             <button type="submit" name="login" class="btn">Login</button>
-                            <a href="#">Forgot Password</a>
+                            <a href="#">Forgot Password?</a>
                         </form>
 
                         <!-- Register Form -->
