--- a/Biodata.html
+++ b/Biodata.html
@@ -2,52 +2,124 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume | Responsive</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <div class="img-area">
+    <div class="navbar">
+        <div class="logo">
+            <a href="Home Page.html"><img src="aa.png" width="170px"></a>
+        </div>
+        <nav>
+            <ul id="MenuItems">
+                <li class="search-bar"><input type="text" placeholder="Search..."><button type="submit"><i class="fa fa-search"></i></button></li>
+                <li><a href="Home Page.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="product.html"><i class="fa-solid fa-box"></i> Products</a></li>
+                <li><a href="account.html"><i class="fa-solid fa-user"></i> Account</a></li>
+            </ul>
+        </nav>
+        <a href="cart.html"><img src="cart2.png" width="60px" height="50px"></a>
+        <img src="menu.png" class="menu-icon" onclick="menutoggle()" width="30px" height="30px">
+    </div>
+</div>
+    <div class="biodata-container">
+        <div class="biodata-header">
+            <div class="biodata-img-area">
                 <img src="formal pic.jpg" alt="">
             </div>
             <h1>Jansen Mark Q. Silao</h1>
             <h3>Web Developer</h3>
 
-            <div class="main">
-                <div class="left">
-                    <h2>Personal Information</h2>
-                    <p><strong>Name:</strong>Jansen Mark Q. Silao</p>
-                    <p><strong>Age:</strong>19</p>
-                    <p><strong>E-Mail:</strong>Silao.jansenmark.quintos1@gmail.com</p>
-                    <p><strong>Phone#:</strong>0909 972 5330</p>
-                    <h2>Skills</h2>
+            <div class="biodata-main">
+                <div class="biodata-left">
+                    <h2 class="section-title">Personal Information</h2>
+                    <p><strong>Name:</strong> Jansen Mark Q. Silao</p>
+                    <p><strong>Age:</strong> 19</p>
+                    <p><strong>E-Mail:</strong> Silao.jansenmark.quintos1@gmail.com</p>
+                    <p><strong>Phone#:</strong> 0909 972 5330</p>
+                    <h2 class="section-title">Skills</h2>
                     <ul>
                         <li>HTML/CSS</li>
                         <li>Java</li>
                         <li>JavaScript</li>
                         <li>Analytics</li>
                     </ul>
-                    <h2>Education</h2>
-                    <p><strong>College:</strong>Quezon City University</p>
+                    <h2 class="section-title">Education</h2>
+                    <p><strong>College:</strong> Quezon City University</p>
                     <h3>Bachelor of Science in Information System</h3>
-                    <p><strong>Year:</strong>2024 - Present</p>
+                    <p><strong>Year:</strong> 2024 - Present</p>
                     <p><strong>SECONDARY</strong></p>
                     <h3>Science, Technology, Engineering, and Mathematics (STEM)</h3>
-                    <p><strong>School:</strong>Sto Niño Parochial School Inc.</p>
-                    <p><strong>Year:</strong>2022 - 2024</p>
+                    <p><strong>School:</strong> Sto Niño Parochial School Inc.</p>
+                    <p><strong>Year:</strong> 2022 - 2024</p>
                 </div>
-                <div class="right">
-                    <h2>Work Experience</h2>
+                <div class="biodata-right">
+                    <h2 class="section-title">Work Experience</h2>
                     <p>No work experience yet.</p>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-------------footer--------------->
 
-    
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col-1">
+                <h3>Download Our App</h3>
+                <p>Download App for Android and ios</p>
+                <div class="app-logo">
+                    <img src="d1.png">
+                    <img src="d2.png">
+                </div>
+            </div>
+            <div class="footer-col-2">
+                <a href="Home Page.html"><img src="2.png"></a>
+                <p>Vogue Essence by Sen—elevating style with elegance, luxury, and trendsetting fashion.</p>
+            </div>
+            <div class="footer-col-3">
+                <h3>Useful Links</h3>
+                <ul>
+                    <li><i class="fa-solid fa-ticket fa-1g"></i> Coupons</li>
+                    <li><i class="fa-solid fa-undo fa-1g"></i> Return Policy</li>
+                    <a href="feedback.html"><li><i class="fa-solid fa-comment fa-1g"></i> Feedback</li></a>
+                    <li><i class="fa-solid fa-handshake fa-1g"></i> Join Affiliate</li>  
+                </ul>
+            </div>
+            <div class="footer-col-4">
+                <h3>Follow us</h3>
+                <ul>
+                    <li><a href="https://www.facebook.com/profile.php?id=61573238416249">
+                        <i class="fa-brands fa-facebook fa-1g"></i> Facebook</a></li>
+                    <li><a href="https://www.instagram.com/JansenMark04">
+                        <i class="fa-brands fa-instagram fa-1g"></i> Instagram</a></li>
+                    <li><a href="https://www.youtube.com/JansenMark04">
+                        <i class="fa-brands fa-youtube fa-1g"></i> YouTube</a></li>
+                    <li><a href="https://www.tiktok.com/@JansenMark04">
+                        <i class="fa-brands fa-tiktok fa-1g"></i> TikTok</a></li>
+                </ul>
+            </div>
+            <div class="footer-col-5">
+                <h3>Biodata</h3>
+                <ul>
+                    <li><a href="Biodata.html"><i class="fa-solid fa-user">About Me</a></i></li>
+                </ul>
+            </div>
+            
+        </div>
+        <hr>
+        <p class="copyright">© 2025 Vogue Essence By Sen. All rights reserved.</p>
+    </div>
+
+    <script src="index.js"></script>
+</div>
 </body>
 </html>
