--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
 </div>
 
 
-    
+    <div class="small-container">
         <div class="row row-2" >
             <h2>All Products</h2>
             <select>
@@ -44,8 +44,6 @@
                 <option> Sort by rating</option>
                 <option> Sort by sale</option>
             </select>
-        </div>
-
 
         <div class="row">
             <div class="col-4">
@@ -207,9 +205,8 @@
                 <a href="product2.html"><span>&#8594;</span></a>
             </div>
         </div>
-
-
-
+</div>
+</div>
 
 
 <!-------------footer--------------->
@@ -264,6 +261,7 @@
     </div>
 </div>
 
+
 <!-----------js for toggle menu-------------->
     <script>
         var MenuItems = document.getElementById("MenuItems");
@@ -285,7 +283,5 @@
     </script>
 
 <script src="index.js"></script>
-
-
 </body>
 </html>
